# clv-uplift

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: sample_customers.json  sample_explain_response.json  sample_predict_response.json
notebooks/: 01_uplift_training.py  02_demo.ipynb  02_uplift_training.py
scripts/: build_demo_notebook.py  generate_examples.py  run_demo.py  scaffold.py  train_in_docker.sh
src/clv_uplift/: __init__.py  config.py
src/clv_uplift/api/: __init__.py  dependencies.py  main.py  schemas.py
src/clv_uplift/api/routers/: explain.py  health.py  info.py  predict.py
src/clv_uplift/data/: __init__.py  audit.py  loader.py
src/clv_uplift/features/: __init__.py  rfm.py
src/clv_uplift/models/: __init__.py  diagnostics.py  explain.py  policy.py  serving.py  uplift.py  validation.py
streamlit_app/: Dockerfile.streamlit  app.py  requirements.streamlit.txt
tests/: test_api.py
