[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clv-uplift"
version = "0.1.0"
description = "Customer Lifetime Value + Uplift Modeling Service"
requires-python = ">=3.10,<3.14"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "shap>=0.45",
    "econml>=0.16",
    "dowhy>=0.11",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "nbclient>=0.9",
    "nbconvert>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]